--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1600,6 +1600,11 @@ grid-column: 1/3;
 .footer__inner-content .footer-menu .footer__menu-item {
   padding-bottom: 15px;
 }
+
+.parallax-2 {
+  top: -45%;
+  left: 13.5%;
+}
  }
 
  @media screen and (max-width: 365px){
@@ -1649,7 +1654,3 @@ grid-column: 1/3;
  }
 
 /* ==== MEDIA QUERIES END==== */
-
-.hide{
-  display: none;
-}
